--- a/css/stercoder.css
+++ b/css/stercoder.css
@@ -1,4 +1,9 @@
-/* Start global rules  */
+/* Start Global Rules */
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
 :root {
   --main-color: #2196f3;
   --main-color-alt: #1787e0;
@@ -7,28 +12,20 @@
   --main-padding-bottom: 100px;
   --section-background: #ececec;
 }
-* {
-  box-sizing: border-box;
-}
-
 html {
   scroll-behavior: smooth;
 }
-
 body {
-  font-family: "cairo", sans-serif;
+  font-family: "Cairo", sans-serif;
 }
-
+a {
+  text-decoration: none;
+}
 ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-
-a {
-  text-decoration: none;
-}
-
 .container {
   padding-left: 15px;
   padding-right: 15px;
@@ -53,9 +50,6 @@ a {
     width: 1170px;
   }
 }
-
-/*Start Main Title */
-
 .main-title {
   text-transform: uppercase;
   margin: 0 auto 80px;
@@ -97,9 +91,36 @@ a {
   border: 2px solid white;
   transition-delay: 0.5s;
 }
-/*End Main Title */
-
-/* End global rules  */
+.spikes {
+  position: relative;
+}
+.spikes::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  width: 100%;
+  height: 30px;
+  z-index: 1;
+  background-image: linear-gradient(135deg, white 25%, transparent 25%),
+    linear-gradient(225deg, white 25%, transparent 25%);
+  background-size: 30px 30px;
+}
+.dots {
+  background-image: url("../imgs/dots.png");
+  height: 186px;
+  width: 204px;
+  background-repeat: no-repeat;
+  position: absolute;
+}
+.dots-up {
+  top: 200px;
+  right: 0;
+}
+.dots-down {
+  bottom: 200px;
+  left: 0;
+}
+/* End Global Rules */
 /* Start Header */
 .header {
   background-color: white;
@@ -183,7 +204,7 @@ a {
   position: absolute;
   width: 100%;
   left: 0;
-  padding: 0 30px 30px 30px;
+  padding: 30px;
   background-color: white;
   border-bottom: 3px solid var(--main-color);
   z-index: -1;
@@ -247,19 +268,16 @@ a {
 .header .mega-menu .links li a i {
   margin-right: 10px;
 }
-
 /* End Header */
-
 /* Start Landing */
 .landing {
   position: relative;
 }
-
 .landing::before {
   content: "";
   position: absolute;
-  top: -40px;
   left: 0;
+  top: -40px;
   width: 100%;
   height: 100%;
   background-color: #ececec;
@@ -267,14 +285,12 @@ a {
   transform: skewY(-6deg);
   transform-origin: top left;
 }
-
 .landing .container {
   min-height: calc(100vh - 72px);
   display: flex;
   align-items: center;
   padding-bottom: 120px;
 }
-
 .landing .text {
   flex: 1;
 }
@@ -283,17 +299,19 @@ a {
     text-align: center;
   }
 }
-
 .landing .text h1 {
   font-size: 40px;
   margin: 0;
-  left: -2px;
+  letter-spacing: -2px;
 }
-
-@media (max-width: 991px) {
+@media (max-width: 767px) {
   .landing .text h1 {
     font-size: 28px;
   }
+}
+
+.landing .text h1 span {
+  color: var(--main-color);
 }
 
 .landing .text p {
@@ -303,26 +321,26 @@ a {
   color: #666;
   max-width: 500px;
 }
-
 @media (max-width: 991px) {
   .landing .text p {
     margin: 10px auto;
+  }
+}
+@media (max-width: 767px) {
+  .landing .text p {
     font-size: 18px;
   }
 }
-
 .landing .image img {
   position: relative;
   width: 600px;
   animation: up-and-down 5s linear infinite;
 }
-
 @media (max-width: 991px) {
   .landing .image {
     display: none;
   }
 }
-
 .landing .go-down {
   color: var(--main-color);
   position: absolute;
@@ -331,84 +349,69 @@ a {
   transform: translateX(-50%);
   transition: var(--main-transition);
 }
-
 .landing .go-down:hover {
   color: var(--main-color-alt);
 }
-
 .landing .go-down i {
   animation: bouncing 1.5s infinite;
 }
-
 /* End Landing */
-
 /* Start Articles */
 .articles {
   padding-top: var(--main-padding-top);
   padding-bottom: var(--main-padding-bottom);
+  position: relative;
 }
-
 .articles .container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 40px;
 }
-
 .articles .box {
-  box-shadow: 0 2px 15px rgb(0 0 0 /10%);
+  box-shadow: 0 2px 15px rgb(0 0 0 / 10%);
   background-color: white;
   border-radius: 6px;
   overflow: hidden;
   transition: transform var(--main-transition),
     box-shadow var(--main-transition);
 }
-
 .articles .box:hover {
   transform: translateY(-10px);
-  box-shadow: 0 2px 15px rgb(0 0 0 /20%);
+  box-shadow: 0 2px 15px rgb(0 0 0 / 20%);
 }
-
 .articles .box img {
   width: 100%;
   max-width: 100%;
 }
-
 .articles .box .content {
   padding: 20px;
 }
-
 .articles .box .content h3 {
   margin: 0;
 }
-
 .articles .box .content p {
   margin: 10px 0 0;
   line-height: 1.5;
   color: #777;
 }
-
 .articles .box .info {
   padding: 20px;
-  border-bottom: 1px solid #e6e6e7;
+  border-top: 1px solid #e6e6e7;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-
 .articles .box .info a {
   color: var(--main-color);
   font-weight: bold;
 }
-
 .articles .box .info i {
   color: var(--main-color);
 }
-
 .articles .box:hover .info i {
   animation: moving-arrow 0.6s linear infinite;
 }
 /* End Articles */
-
 /* Start Gallery */
 .gallery {
   padding-top: var(--main-padding-top);
@@ -574,7 +577,6 @@ a {
   color: white;
 }
 /* End Features */
-
 /* Start Testimonials */
 .testimonials {
   padding-top: var(--main-padding-top);
@@ -621,7 +623,6 @@ a {
   margin-bottom: 0;
 }
 /* End Testimonials */
-
 /* Start Team */
 .team {
   padding-top: var(--main-padding-top);
@@ -711,7 +712,6 @@ a {
 }
 /* End Team */
 /* Start Services */
-
 .services {
   padding-top: var(--main-padding-top);
   padding-bottom: var(--main-padding-bottom);
@@ -840,7 +840,6 @@ a {
   transition: width 0.5s linear;
 }
 /* End Skills */
-
 /* Start Work Steps */
 .work-steps {
   padding-top: var(--main-padding-top);
@@ -920,7 +919,6 @@ a {
   font-size: 18px;
 }
 /* End Work Steps */
-
 /* Start Events */
 .events {
   padding-top: var(--main-padding-top);
@@ -1048,7 +1046,6 @@ a {
   background-color: var(--main-color-alt);
 }
 /* End Events */
-
 /* Start Pricing */
 .pricing {
   padding-top: var(--main-padding-top);
@@ -1170,7 +1167,6 @@ a {
   color: white;
 }
 /* End Pricing */
-
 /* Start Videos */
 .videos {
   padding-top: var(--main-padding-top);
@@ -1230,7 +1226,6 @@ a {
   margin-top: 10px;
 }
 /* End Videos */
-
 /* Start Stats */
 .stats {
   padding-top: var(--main-padding-top);
@@ -1307,7 +1302,6 @@ a {
   font-weight: bold;
 }
 /* End Stats */
-
 /* Start Discount */
 .discount {
   min-height: 100vh;
@@ -1403,7 +1397,6 @@ a {
   max-width: 100%;
 }
 /* End Discount */
-
 /* Start Footer */
 .footer {
   background-color: #191919;
@@ -1524,25 +1517,20 @@ a {
   margin: 50px 0 0;
   border-top: 1px solid #444;
 }
-
-.footer .copyright span {
+.copyright span {
   color: var(--main-color);
 }
-
 /* End Footer */
-
 /* Start Animation */
-
 @keyframes up-and-down {
   0%,
   100% {
-    top: 0px;
+    top: 0;
   }
   50% {
-    top: 50px;
+    top: -50px;
   }
 }
-
 @keyframes bouncing {
   0%,
   10%,
@@ -1557,7 +1545,6 @@ a {
     transform: translateY(-15px);
   }
 }
-
 @keyframes left-move {
   50% {
     left: 0;
@@ -1584,13 +1571,11 @@ a {
     height: 100%;
   }
 }
-
 @keyframes moving-arrow {
   100% {
     transform: translateX(10px);
   }
 }
-
 @keyframes flashing {
   0%,
   40% {
@@ -1602,10 +1587,13 @@ a {
     height: 200%;
   }
 }
-
-@keyframes overlay {
+@keyframes change-background {
+  0%,
   100% {
-    border-width: 0 0 140px 800px;
+    background-image: url("../imgs/discount-background1.jpg");
+  }
+  50% {
+    background-image: url("../imgs/discount-background2.jpg");
   }
 }
 /* End Animation */
